Fixed align of header

--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,7 @@
 /*Set the logo and brand sizes*/
+a.logo.navbar-btn {
+	margin: 0;
+}
 a.logo img{
 	width: 64px; 
 }
